fix overlap

--- a/src/app/print-control/print-control.component.scss
+++ b/src/app/print-control/print-control.component.scss
@@ -4,7 +4,7 @@
     left: 0;
     right: 0;
     top: 0;
-    bottom: 0;
+    bottom: 11vh;
     background-color: rgba(0, 0, 0, 0.85);
     // backdrop-filter: blur(8px);
     transition: opacity 0.4s ease-in-out;
@@ -104,7 +104,7 @@
     &__wrapper {
       display: block;
       width: 90vw;
-      margin: 6vh 5vw;
+      margin: 3vh 5vw;
     }
 
     &__change-parameter {
@@ -129,18 +129,18 @@
       }
 
       &-increase {
-        padding: 3vh 6vw;
+        padding: 2vh 6vw;
         font-weight: 500;
       }
 
       &-decrease {
-        padding: 3vh 6vw;
+        padding: 2vh 6vw;
         font-weight: 500;
       }
     }
 
     &__name {
-      margin-top: 5vh;
+      margin-top: 2vh;
       display: block;
       font-size: 0.8rem;
     }
